0.1.09	30-Jan-2018
	- Updated README.md
	- Changed formatting for "usage" command
	- Run detection of invalid group replication earlier.
0.1.08	29-Jan-2018
	- Added sandbox description file
	- 'sandboxes' command uses above file for sandbox listing
	- Added 'delete' command
0.1.07	29-Jan-2018
	- improved documentation
	- Added "usage" command
	- Added description to "sandboxes" output
	- Added check for version format
	- Changed message for missing argument
	- Added check for sandbox-home existence
0.1.06	28-Jan-2018
	- Added group replication topology.
0.1.05	27-Jan-2018
	- Added option --master to 'single' command
	- Added new commands to each sandbox: add_option, show_binlog,
	show_relaylog, my.
0.1.04	26-Jan-2018
	- Added short names for some flags.
	- Improved commands usage text
0.1.03	26-Jan-2018
	- Modified --my-cnf-options and --init-options to be accepted multiple
	times
0.1.02	25-Jan-2018
	- Fixed bug in unpack when basedir was not created.
0.1.01	25-Jan-2018
	- Fixed inclusion of options in my.sandbox.cnf (--my-cnf-options)
	- Added command 'multiple'
	- Enhanced documentation
0.1.00	24-Jan-2018
	- Initial commit with basic features migrated from MySQL-Sandbox